# tfds-fusion-360-gallery-dataset

./: .gitignore  .pylintrc  MANIFEST.in  README.md  noxfile.py  requirements.txt  setup.cfg  setup.py  test.sh
datasets/cad/fusion360gallery/: brepnet_features.py  entity_mapper.py  fusion360gallery.py  fusion360gallery_test.py
datasets/cad/fusion360gallery/dummy_data/: train_test.json
datasets/cad/fusion360gallery/dummy_data/breps/seg/: 136322_81d84c1b_1.seg
datasets/cad/fusion360gallery/dummy_data/breps/step/: 136322_81d84c1b_1.stp
tfds_fusion_360_gallery_dataset/cad/fusion360gallery/: brepnet_features.py  fusion360gallery.py  fusion360gallery_test.py
tfds_fusion_360_gallery_dataset/cad/fusion360gallery/dummy_data/breps/seg/: 41142_1bf94ee2_17.seg
tfds_fusion_360_gallery_dataset/cad/fusion360gallery/dummy_data/s2.0.0/: Fusion 360 Dataset License.docx
tfds_fusion_360_gallery_dataset/cad/fusion360gallery/dummy_data/s2.0.0/breps/step/: 41142_1bf94ee2_17.stp
