[metadata]
name = tfds-fusion-360-gallery-dataset
version = 0.1.0
description = Tensorflow dataset wrapper of Fusion 360 Gallery dataset.
long_description = file: README.md
long_description_content_type = text/markdown
author = Danil Petrov
author_email = ddbihbka@gmail.com
license = Apache 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    homepage = https://github.com/d61h6k4/tfds-fusion-360-gallery-dataset

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy>=1.21
    tensorflow >= 2.7
    tensorflow-datasets >= 4.4
    deprecate>=1.0.5
    occwl@git+https://github.com/AutodeskAILab/occwl@main
    brep2graph@git+https://github.com/d61h6k4/brep2graph@main
python_requires = >=3.8
